--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ header .container:before{
 	vertical-align:	middle;
 }
 
-.container{
+.container, .form{
 	width: 60%;
 	height: 100%;
 	margin: 0 auto;
@@ -131,4 +131,29 @@ button[disabled=disabled], button:disabled {
 
 .campo-invalido{
 	border: 1px solid red;
+}
+
+.form h2 {
+	margin-top: revert;
+}
+
+.form label {
+	font-size: 1.5em;
+	width: 25%;
+	float: left;
+}
+
+.form input:not(input[type="submit"]) {
+	width: 75%;
+	padding: 0.5em;
+	margin-bottom: 1em;
+	float: left;
+}
+
+.form input[type="submit"] {
+	padding: 0.5em;
+	background-color: rgb(0, 122, 163);
+	color: white;
+	border-style: none;
+	font-size: 1.3em;
 }
